[package]
name = "linear_clock"
version = "0.1.2"
authors = ["functional-tim <tim.gravert@web.de>"]
edition = "2024"
description = "A program to show a linear clock with date."
readme = "README.md"
homepage = "https://github.com/functional-tim/linear_clock"
repository = "https://github.com/functional-tim/linear_clock"
license = "MIT OR Apache-2.0"
keywords = ["linear-clock", "clock", "print", "display"]
categories = ["command-line-utilities", "command-line-interface"]

[dependencies]
chrono = "^0.4"
structopt = "^0.3"
